--- a/browserstack.yml
+++ b/browserstack.yml
@@ -12,7 +12,7 @@ accessKey: ${BROWSERSTACK_ACCESS_KEY}
 # Reduce verbose output from BrowserStack SDK
 verbose: false
 logLevel: error
-# Extended timeouts for long-running tests
+# Extended timeouts for long-running tests (5 minutes)
 idleTimeout: 300000
 commandTimeout: 300000
 
@@ -80,7 +80,7 @@ platforms:
 # Example 1 - If you have configured 3 platforms and set `parallelsPerPlatform` as 2, a total of 6 (2 * 3) parallel threads will be used on BrowserStack
 #
 # Example 2 - If you have configured 1 platform and set `parallelsPerPlatform` as 5, a total of 5 (1 * 5) parallel threads will be used on BrowserStack
-parallelsPerPlatform: 1
+parallelsPerPlatform: 2
 
 # ==========================================
 # BrowserStack Local
@@ -118,12 +118,12 @@ debug: false
 # networkLogsOptions: true
 # video: true
 
-# automation: true
+automation: false
 
-# percy: true
-# percyCaptureMode: manual
+percy: true
+percyCaptureMode: manual
 
-# accessibility: false
+accessibility: false
 
 # Test Observability is an intelligent test reporting & debugging product. It collects data using the SDK. Read more about what data is collected at https://www.browserstack.com/docs/test-observability/references/terms-and-conditions
 # Visit observability.browserstack.com to see your test reports and insights. To disable test observability, specify `testObservability: false` in the key below.
